--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "ext-simplexml": "*",
         "composer/installers": "^2.0",
-        "cweagans/composer-patches": "^1.7",
+        "cweagans/composer-patches": "1.x-dev",
         "drupal/admin_toolbar": "^3.3",
         "drupal/allowed_formats": "^2.0",
         "drupal/coder": "8.3.17",
