--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   color_field: 0
   config: 0
   config_translation: 0
+  content_moderation: 0
   contextual: 0
   datetime: 0
   dblog: 0
