--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/redirect": "^1.8",
         "drupal/schema_metatag": "^2.4",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/simplenews": "^4.0",
         "drupal/svg_image_field": "^2.2@beta",
         "drupal/tmgmt": "^1.15",
         "drupal/token": "^1.11",
