--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.blog.body
     - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_tags
+    - field.field.node.blog.simplenews_issue
     - node.type.blog
   module:
     - metatag
@@ -27,6 +28,11 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 3
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
@@ -50,3 +56,4 @@ content:
     region: content
 hidden:
   langcode: true
+  simplenews_issue: true
