--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.blog.body
     - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_tags
+    - field.field.node.blog.simplenews_issue
     - node.type.blog
   module:
     - text
@@ -24,12 +25,19 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
     weight: 100
     region: content
 hidden:
+  addtoany: true
   field_meta_tags: true
   field_tags: true
   langcode: true
+  simplenews_issue: true
