--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -66,6 +66,7 @@ module:
   shortcut: 0
   simple_sitemap: 0
   simple_sitemap_views: 0
+  simplenews: 0
   svg_image_field: 0
   system: 0
   taxonomy: 0
