--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -12,6 +12,7 @@ dependencies:
     - media
     - search
     - shortcut
+    - simplenews
     - system
 _core:
   default_config_hash: I44QAB4es39lNzMQWiJLq2dfjX7VRSOzT_5KzAcUq_M
@@ -24,6 +25,7 @@ permissions:
   - 'access shortcuts'
   - 'opt-in or out of matomo tracking'
   - 'search content'
+  - 'subscribe to newsletters'
   - 'use text format basic_text'
   - 'use text format full_html'
   - 'use text format webform_default'
