--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -3,59 +3,77 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.blog.body
-    - field.field.node.blog.field_image
+    - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
+    - field.field.node.blog.field_page_banner
     - field.field.node.blog.field_tags
     - field.field.node.blog.simplenews_issue
     - node.type.blog
     - workflows.workflow.editorial
   module:
     - content_moderation
+    - field_group
+    - layout_paragraphs
     - media_library
     - metatag
     - path
     - simplenews
-    - text
+third_party_settings:
+  field_group:
+    group_blog_banner:
+      children:
+        - field_page_banner
+      label: 'Blog Banner'
+      region: content
+      parent_name: ''
+      weight: 2
+      format_type: details
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        open: false
+        description: ''
+        required_fields: true
 id: node.blog.default
 targetEntityType: node
 bundle: blog
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 13
-    region: content
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-      show_summary: false
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_image:
-    type: media_library_widget
-    weight: 1
+  field_components:
+    type: layout_paragraphs
+    weight: 15
     region: content
     settings:
-      media_types: {  }
+      preview_view_mode: default
+      nesting_depth: 0
+      require_layouts: 0
+      empty_message: ''
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 15
+    weight: 17
     region: content
     settings:
       sidebar: true
       use_details: true
     third_party_settings: {  }
+  field_page_banner:
+    type: media_library_widget
+    weight: 19
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 14
+    weight: 16
     region: content
     settings:
       match_operator: CONTAINS
@@ -72,64 +90,64 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
-    type: boolean_checkbox
-    weight: 7
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  simple_sitemap:
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  simplenews_issue:
-    type: simplenews_issue
-    weight: 16
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    weight: 12
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  sticky:
     type: boolean_checkbox
     weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
+  simple_sitemap:
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  simplenews_issue:
+    type: simplenews_issue
+    weight: 18
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    weight: 13
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  sticky:
+    type: boolean_checkbox
+    weight: 9
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 2
+    weight: 3
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -138,7 +156,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
