--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -3,16 +3,39 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.blog.body
-    - field.field.node.blog.field_image
+    - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
+    - field.field.node.blog.field_page_banner
     - field.field.node.blog.field_tags
     - field.field.node.blog.simplenews_issue
     - node.type.blog
   module:
+    - entity_reference_revisions
+    - field_group
+    - media
     - metatag
-    - text
     - user
+third_party_settings:
+  field_group:
+    group_author_social:
+      children:
+        - addtoany
+      label: 'Author & Social'
+      parent_name: ''
+      region: content
+      weight: 2
+      format_type: html_element
+      format_settings:
+        classes: author-and-social
+        show_empty_fields: false
+        id: ''
+        element: section
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
 id: node.blog.default
 targetEntityType: node
 bundle: blog
@@ -21,49 +44,38 @@ content:
   addtoany:
     settings: {  }
     third_party_settings: {  }
-    weight: 4
-    region: content
-  body:
-    type: text_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 5
-    region: content
-  content_moderation_control:
-    settings: {  }
-    third_party_settings: {  }
     weight: 2
     region: content
-  field_image:
-    type: entity_reference_entity_view
+  field_components:
+    type: entity_reference_revisions_entity_view
     label: hidden
     settings:
       view_mode: default
-      link: true
+      link: ''
     third_party_settings: {  }
-    weight: 0
+    weight: 4
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 5
     region: content
-  field_tags:
-    type: entity_reference_label
-    label: above
+  field_page_banner:
+    type: media_thumbnail
+    label: hidden
     settings:
-      link: true
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
-    weight: 6
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
 hidden:
+  content_moderation_control: true
+  field_tags: true
   langcode: true
+  links: true
   simplenews_issue: true
