--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -4,42 +4,48 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.blog.body
-    - field.field.node.blog.field_image
+    - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
+    - field.field.node.blog.field_page_banner
     - field.field.node.blog.field_tags
     - field.field.node.blog.simplenews_issue
     - node.type.blog
   module:
-    - text
+    - media
     - user
 id: node.blog.teaser
 targetEntityType: node
 bundle: blog
 mode: teaser
 content:
-  body:
-    type: text_summary_or_trimmed
-    label: hidden
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    weight: 101
-    region: content
   content_moderation_control:
     settings: {  }
     third_party_settings: {  }
-    weight: -20
+    weight: 0
     region: content
-  links:
-    settings: {  }
+  field_page_banner:
+    type: media_thumbnail
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
-    weight: 100
+    weight: 1
+    region: content
+  field_tags:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 3
     region: content
 hidden:
   addtoany: true
-  field_image: true
+  field_components: true
   field_meta_tags: true
-  field_tags: true
   langcode: true
+  links: true
   simplenews_issue: true
