--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.blog.field_blog_date
     - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_page_banner
@@ -12,6 +13,7 @@ dependencies:
     - workflows.workflow.editorial
   module:
     - content_moderation
+    - datetime
     - field_group
     - layout_paragraphs
     - media_library
@@ -46,9 +48,15 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_blog_date:
+    type: datetime_default
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_components:
     type: layout_paragraphs
-    weight: 15
+    weight: 14
     region: content
     settings:
       preview_view_mode: default
@@ -58,7 +66,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 17
+    weight: 16
     region: content
     settings:
       sidebar: true
@@ -73,7 +81,7 @@ content:
     third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 16
+    weight: 15
     region: content
     settings:
       match_operator: CONTAINS
@@ -114,7 +122,7 @@ content:
     third_party_settings: {  }
   simplenews_issue:
     type: simplenews_issue
-    weight: 18
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
