--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.blog.field_blog_date
     - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_page_banner
@@ -11,6 +12,7 @@ dependencies:
     - field.field.node.blog.simplenews_issue
     - node.type.blog
   module:
+    - datetime
     - media
     - user
 id: node.blog.teaser
@@ -22,6 +24,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_blog_date:
+    type: datetime_custom
+    label: hidden
+    settings:
+      timezone_override: ''
+      date_format: 'F d, o'
+    third_party_settings: {  }
+    weight: 2
     region: content
   field_page_banner:
     type: media_thumbnail
