--- a/config/sync/core.entity_view_display.paragraph.blog_content_list_item.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.blog_content_list_item.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.blog_content_list_item.field_heading
     - field.field.paragraph.blog_content_list_item.field_image
     - field.field.paragraph.blog_content_list_item.field_image_alignment
+    - image.style.blog_content_list_340x450_
     - paragraphs.paragraphs_type.blog_content_list_item
   module:
     - media
@@ -36,7 +37,7 @@ content:
     label: hidden
     settings:
       image_link: ''
-      image_style: ''
+      image_style: blog_content_list_340x450_
       image_loading:
         attribute: lazy
     third_party_settings: {  }
