--- a/config/sync/core.entity_view_display.paragraph.blog_content_list.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.blog_content_list.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - paragraphs.paragraphs_type.blog_content_list
   module:
     - entity_reference_revisions
-    - options
 id: paragraph.blog_content_list.default
 targetEntityType: paragraph
 bundle: blog_content_list
@@ -16,18 +15,12 @@ mode: default
 content:
   field_blog_content_list_items:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     weight: 0
     region: content
-  field_blog_content_list_style:
-    type: list_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
-hidden: {  }
+hidden:
+  field_blog_content_list_style: true
