--- a/config/sync/field.field.paragraph.blog_content_list.field_blog_content_list_style.yml
+++ b/config/sync/field.field.paragraph.blog_content_list.field_blog_content_list_style.yml
@@ -18,7 +18,7 @@ bundle: blog_content_list
 label: 'Blog Content List Style'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value:
   -
     value: small_images
