--- a/config/sync/language.content_settings.paragraph.blog_content_list.yml
+++ b/config/sync/language.content_settings.paragraph.blog_content_list.yml
@@ -1,9 +1,9 @@
-uuid: 52fb7b1a-16df-4ba2-b74a-0aff3b4868c4
+uuid: 4547be40-302e-4ee2-b7b7-958a87ff5189
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.blog_tags
+    - paragraphs.paragraphs_type.blog_content_list
   module:
     - content_translation
 third_party_settings:
@@ -11,8 +11,8 @@ third_party_settings:
     enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: taxonomy_term.blog_tags
-target_entity_type_id: taxonomy_term
-target_bundle: blog_tags
+id: paragraph.blog_content_list
+target_entity_type_id: paragraph
+target_bundle: blog_content_list
 default_langcode: site_default
 language_alterable: true
