--- a/config/sync/core.entity_view_display.node.blog.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog.teaser.yml
@@ -13,18 +13,12 @@ dependencies:
     - node.type.blog
   module:
     - datetime
-    - media
     - user
 id: node.blog.teaser
 targetEntityType: node
 bundle: blog
 mode: teaser
 content:
-  content_moderation_control:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 0
-    region: content
   field_blog_date:
     type: datetime_custom
     label: hidden
@@ -32,18 +26,7 @@ content:
       timezone_override: ''
       date_format: 'F d, o'
     third_party_settings: {  }
-    weight: 2
-    region: content
-  field_page_banner:
-    type: media_thumbnail
-    label: hidden
-    settings:
-      image_link: ''
-      image_style: ''
-      image_loading:
-        attribute: lazy
-    third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
   field_tags:
     type: entity_reference_label
@@ -51,12 +34,14 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 3
+    weight: 1
     region: content
 hidden:
   addtoany: true
+  content_moderation_control: true
   field_components: true
   field_meta_tags: true
+  field_page_banner: true
   langcode: true
   links: true
   simplenews_issue: true
