--- a/web/themes/custom/govt_yukon_rms/govt_yukon_rms.info.yml
+++ b/web/themes/custom/govt_yukon_rms/govt_yukon_rms.info.yml
@@ -17,6 +17,7 @@ regions:
   content: Content
   content_below: 'Content Below'
   sidebar: Sidebar
+  sidebar_second: 'Sidebar Right'
   above_footer: 'Above Footer'
   footer: Footer
   user_menu: 'User Menu'
