--- a/config/sync/addtoany.settings.yml
+++ b/config/sync/addtoany.settings.yml
@@ -1,12 +1,12 @@
 _core:
   default_config_hash: fMTQlRT4MXb9WtflmxsvPI0VnKTQNjOnlx9oCWO3vYo
 buttons_size: 32
-additional_html: "<a class=\"a2a_button_facebook\"></a>\r\n<a class=\"a2a_button_mastodon\"></a>\r\n<a class=\"a2a_button_email\"></a>\r\n"
+additional_html: "<a class=\"a2a_button_facebook\"></a>\r\n<a class=\"a2a_button_x\"></a>\r\n<a class=\"a2a_button_linkedin\"></a>\r\n<a class=\"a2a_button_copy_link\"></a>\r\n<a class=\"a2a_button_email\"></a>\r\n"
 additional_css: ''
 additional_js: ''
 universal_button: default
 custom_universal_button: ''
-universal_button_placement: before
+universal_button_placement: after
 entities:
   media: 0
   node: 1
@@ -25,3 +25,6 @@ entities:
   user: 0
   webform_submission: 0
   paragraph: 0
+  content_moderation_state: 0
+  simplenews_subscriber: 0
+  simplenews_subscriber_history: 0
