--- a/config/sync/block.block.simplenewssubscription.yml
+++ b/config/sync/block.block.simplenewssubscription.yml
@@ -9,7 +9,7 @@ dependencies:
     - govt_yukon_rms
 id: simplenewssubscription
 theme: govt_yukon_rms
-region: sidebar
+region: sidebar_second
 weight: -7
 provider: null
 plugin: simplenews_subscription_block
