--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -25,10 +25,27 @@ third_party_settings:
     group_blog_banner:
       children:
         - field_page_banner
-      label: 'Blog Banner'
+      label: 'Page Banner'
       region: content
       parent_name: ''
-      weight: 2
+      weight: 14
+      format_type: details
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        open: false
+        description: ''
+        required_fields: true
+    group_blog_settings:
+      children:
+        - field_blog_date
+        - field_tags
+        - simplenews_issue
+      label: 'Blog Settings'
+      region: content
+      parent_name: ''
+      weight: 13
       format_type: details
       format_settings:
         classes: ''
@@ -44,29 +61,29 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_blog_date:
     type: datetime_default
-    weight: 1
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   field_components:
     type: layout_paragraphs
-    weight: 14
+    weight: 15
     region: content
     settings:
       preview_view_mode: default
       nesting_depth: 0
-      require_layouts: 0
+      require_layouts: 1
       empty_message: ''
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 16
+    weight: 18
     region: content
     settings:
       sidebar: true
@@ -81,7 +98,7 @@ content:
     third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 15
+    weight: 11
     region: content
     settings:
       match_operator: CONTAINS
@@ -98,64 +115,64 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 8
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   simple_sitemap:
-    weight: 6
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   simplenews_issue:
     type: simplenews_issue
-    weight: 17
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 13
+    weight: 17
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 9
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 3
+    weight: 1
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -164,7 +181,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
