--- a/config/sync/core.entity_form_display.node.simplenews_issue.default.yml
+++ b/config/sync/core.entity_form_display.node.simplenews_issue.default.yml
@@ -59,6 +59,11 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   simplenews_issue:
     type: simplenews_issue
     weight: 3
