--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_role
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,8 +16,18 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_role:
+    type: string
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 1
+    region: content
   member_for:
-    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
     region: content
   user_picture:
     type: image
@@ -31,3 +42,4 @@ content:
     region: content
 hidden:
   langcode: true
+  simplenews: true
