--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/addtoany": "^2.0",
         "drupal/admin_toolbar": "^3.3",
         "drupal/allowed_formats": "^2.0",
+        "drupal/better_exposed_filters": "^7.0@beta",
         "drupal/coder": "8.3.17",
         "drupal/color_field": "^3.0",
         "drupal/core-composer-scaffold": "^10.0",
