--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -3,11 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.blog.field_blog_categories
     - field.field.node.blog.field_blog_date
     - field.field.node.blog.field_components
     - field.field.node.blog.field_meta_tags
     - field.field.node.blog.field_page_banner
-    - field.field.node.blog.field_tags
     - field.field.node.blog.simplenews_issue
     - image.style.page_banner
     - node.type.blog
@@ -77,16 +77,9 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_tags:
-    type: entity_reference_label
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 4
-    region: content
 hidden:
   content_moderation_control: true
+  field_blog_categories: true
   field_meta_tags: true
   langcode: true
   links: true
