--- a/config/sync/field.field.node.blog.simplenews_issue.yml
+++ b/config/sync/field.field.node.blog.simplenews_issue.yml
@@ -5,8 +5,13 @@ dependencies:
   config:
     - field.storage.node.simplenews_issue
     - node.type.blog
+    - simplenews.newsletter.default
   module:
     - simplenews
+    - tmgmt_content
+third_party_settings:
+  tmgmt_content:
+    excluded: false
 id: node.blog.simplenews_issue
 field_name: simplenews_issue
 entity_type: node
@@ -15,9 +20,19 @@ label: Issue
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: 9fb33c93-dfcd-42df-bff6-3ed8b297a7d7
+    handler: simplenews_all
+    handler_settings: null
+    status: 0
+    sent_count: 0
+    error_count: 0
+    subscribers: 0
 default_value_callback: ''
 settings:
   handler: 'default:simplenews_newsletter'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles: null
+    auto_create: false
 field_type: simplenews_issue
