--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: 26b5c65e-806d-4c47-9b6c-ff5825aeed3b
 name: 'Recruitment Marketing'
-mail: pdelorme+govyukon@acromedia.com
+mail: pscwebsite@yukon.ca
 slogan: ''
 page:
   403: /node/9
