--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -49,11 +49,11 @@ content:
     weight: 2
     region: content
   field_blog_date:
-    type: datetime_custom
+    type: datetime_default
     label: hidden
     settings:
       timezone_override: ''
-      date_format: 'F j, o'
+      format_type: month_day_year_string
     third_party_settings: {  }
     weight: 1
     region: content
