--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -43,44 +43,6 @@ settings:
         - justify
         - left
         - right
-    ckeditor5_heading:
-      enabled_headings:
-        - heading1
-        - heading2
-        - heading3
-        - heading4
-        - heading5
-        - heading6
-    ckeditor5_list:
-      reversed: true
-      startIndex: true
-    ckeditor5_sourceEditing:
-      allowed_tags: {  }
-    ckeditor5_style:
-      styles:
-        -
-          label: 'Default Button'
-          element: '<a class="btn">'
-        -
-          label: 'Primary Button'
-          element: '<a class="btn btn--primary">'
-        -
-          label: 'Secondary Button'
-          element: '<a class="btn btn--secondary">'
-        -
-          label: 'Paragraph H1'
-          element: '<p class="h1">'
-        -
-          label: 'Paragraph H2'
-          element: '<p class="h2">'
-        -
-          label: 'Paragraph H3'
-          element: '<p class="h3">'
-    linkit_extension:
-      linkit_enabled: true
-      linkit_profile: default
-    media_media:
-      allow_view_mode_override: true
     ckeditor5_codeBlock:
       languages:
         -
@@ -125,11 +87,51 @@ settings:
         -
           label: XML
           language: xml
+    ckeditor5_heading:
+      enabled_headings:
+        - heading1
+        - heading2
+        - heading3
+        - heading4
+        - heading5
+        - heading6
+    ckeditor5_list:
+      properties:
+        reversed: true
+        startIndex: true
+      multiBlock: true
+    ckeditor5_sourceEditing:
+      allowed_tags: {  }
+    ckeditor5_style:
+      styles:
+        -
+          label: 'Default Button'
+          element: '<a class="btn">'
+        -
+          label: 'Primary Button'
+          element: '<a class="btn btn--primary">'
+        -
+          label: 'Secondary Button'
+          element: '<a class="btn btn--secondary">'
+        -
+          label: 'Paragraph H1'
+          element: '<p class="h1">'
+        -
+          label: 'Paragraph H2'
+          element: '<p class="h2">'
+        -
+          label: 'Paragraph H3'
+          element: '<p class="h3">'
+    linkit_extension:
+      linkit_enabled: true
+      linkit_profile: default
+    media_media:
+      allow_view_mode_override: true
 image_upload:
   status: true
   scheme: public
   directory: inline-images
-  max_size: ''
+  max_size: null
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
