--- a/config/sync/node.type.page.yml
+++ b/config/sync/node.type.page.yml
@@ -15,7 +15,7 @@ _core:
 name: Page
 type: page
 description: 'A standard page for displaying basic content. Supports sidebar regions, so nested pages will be displayed in a sidebar navigation.'
-help: ''
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: false
