--- a/config/sync/views.view.tmgmt_job_messages.yml
+++ b/config/sync/views.view.tmgmt_job_messages.yml
@@ -218,6 +218,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
+          pagination_heading_level: h4
       exposed_form:
         type: basic
         options:
@@ -272,7 +273,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          plugin_id: numeric
+          plugin_id: entity_target_id
           default_action: ignore
           exception:
             value: all
@@ -283,7 +284,6 @@ display:
           default_argument_type: fixed
           default_argument_options:
             argument: ''
-          default_argument_skip_url: false
           summary_options:
             base_path: ''
             count: true
@@ -300,6 +300,7 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
+          target_entity_type_id: tmgmt_job
       filters: {  }
       style:
         type: table
