--- a/config/sync/core.entity_view_display.node.community_profile.default.yml
+++ b/config/sync/core.entity_view_display.node.community_profile.default.yml
@@ -59,6 +59,7 @@ content:
     weight: 0
     region: content
 hidden:
+  addtoany: true
   field_share_this_page: true
   langcode: true
   links: true
