--- a/config/sync/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.teaser.yml
@@ -19,6 +19,7 @@ bundle: landing_page
 mode: teaser
 content: {  }
 hidden:
+  addtoany: true
   field_components: true
   field_disable_page_top_margin: true
   field_hide_header_elements: true
