--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "drupal/views_bulk_operations": "^4.2",
         "drupal/views_infinite_scroll": "^2.0",
         "drupal/webform": "^6.2@beta",
-        "drush/drush": "^12.4"
+        "drush/drush": "^12.5"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -66,7 +66,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "phpstan/extension-installer": true,
             "cweagans/composer-patches": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "tbachert/spi": true
         },
         "sort-packages": true
     },
