--- a/config/sync/addtoany.settings.yml
+++ b/config/sync/addtoany.settings.yml
@@ -1,5 +1,6 @@
 _core:
   default_config_hash: fMTQlRT4MXb9WtflmxsvPI0VnKTQNjOnlx9oCWO3vYo
+langcode: en
 buttons_size: 32
 additional_html: "<a class=\"a2a_button_facebook\"></a>\r\n<a class=\"a2a_button_x\"></a>\r\n<a class=\"a2a_button_linkedin\"></a>\r\n<a class=\"a2a_button_copy_link\"></a>\r\n<a class=\"a2a_button_email\"></a>\r\n"
 additional_css: ''
