--- a/config/sync/core.entity_view_display.node.career_profile.teaser.yml
+++ b/config/sync/core.entity_view_display.node.career_profile.teaser.yml
@@ -34,6 +34,7 @@ content:
     weight: 0
     region: content
 hidden:
+  addtoany: true
   body: true
   field_components: true
   field_departments: true
