--- a/config/sync/node.type.blog.yml
+++ b/config/sync/node.type.blog.yml
@@ -11,7 +11,7 @@ third_party_settings:
 name: Blog
 type: blog
 description: 'A blog content'
-help: ''
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: true
